# hefty-hs

./: .gitignore  CHANGELOG.md  hefty.cabal
src/: Hefty.hs
src/Hefty/: Algebraic.hs  Elab.hs  Free.hs  Hefty.hs
src/Hefty/Effects/Algebraic/: Abort.hs  Error.hs  NonDet.hs  Reader.hs  State.hs  SubJump.hs
src/Hefty/Effects/HigherOrder/: Except.hs  Lambda.hs  Local.hs
